--- a/public/index.html
+++ b/public/index.html
@@ -9,8 +9,8 @@
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js">
   <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
 
-  <link rel="stylesheet" href="./css/main.css">
-  <link rel="stylesheet" href="./css/dashboard.css">
+  <link rel="stylesheet" href="./css/loginpage.css">
+  <link rel="stylesheet" href="./css/topbar.css">
   <link rel="stylesheet" href="./css/sidebar.css">
 </head>
 <body>
